--- a/portofolio.html
+++ b/portofolio.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Agung Wahyu - Frontend Developer & IT Support based in Bali, Indonesia">
     <title>Agung Wahyu - Linktree</title>
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
+    <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -573,7 +575,7 @@
         <!-- Profile Section -->
         <div class="profile-section" data-aos="fade-down">
             <div class="profile-img">
-                <img src="profile.JPG" alt="Agung Wahyu">
+                <img src="profile.jpg" alt="Agung Wahyu">
             </div>
             <h1 class="profile-name">Agung Wahyu</h1>
             <p class="profile-bio">Frontend Developer | IT Support</p>
