fix: comment out profile image section in portfolio

--- a/portofolio.html
+++ b/portofolio.html
@@ -574,9 +574,9 @@
     <div class="container">
         <!-- Profile Section -->
         <div class="profile-section" data-aos="fade-down">
-            <div class="profile-img">
+            <!-- <div class="profile-img">
                 <img src="profile.jpg" alt="Agung Wahyu">
-            </div>
+            </div> -->
             <h1 class="profile-name">Agung Wahyu</h1>
             <p class="profile-bio">Frontend Developer | IT Support</p>
             <div class="profile-location">
